lab1/Test/L1-A-1-92.cmm
struct {
  float QbbNn9hr0DuEn3SayB6U = - gU8wsGD43Fwzw = XUM 
    , XJKjNAcEG3bgUSIJmaG [ 181670197 ] = wi0KL2RC_GE7432bWyH 
    , sCse ;
  int wAz5h4II1 = n , hc ;
  struct {
  }GklNzYTINB6n3gyGjxxb , Qf914fuW6u7jh ;
  struct rVr9pOgj_UBL E ;
};
int WeTEBVFxj4nOsYWVNl6 ( struct UwqdYJuyY IwCxdd8zA0HAMhC_ 
  , float WOVnpiDsr ) {
  struct {
  }ZdtWgSMMvz4 [ 1472233905 ] [ 1173319389 ] [ 123705910 
    ] = qYvYM3EfETUf , _RONrZrzAGX13S8iDOcA ;
  float ypyEy5jrYP69pFq7_jZ [ 1561279810 ] = E32ISmKLrTu53WIRdKnb 
    ;
  struct {
  }_iWPlCOYscI90CmqH ;
  while ( lpCepvXEKsYTv )   ojfhh8lh_g1KfT9O0AVU ;

  if ( M80BJkBj3DlHLkc5S )   J85da07 ;== 
else   if ( vcKWbeOkbIuIow2i4 )   if ( FJTbv6LRQdBue54X6dgR 
    )   Vl6 ;



1669516799.1119794995 }
